# ginga-multimodal

commandline-mm-event-gen-app/: client-browse-services.c  eventoMultimodal.xml  inkml.xsd  multimodal.xsd
gingacc-cm-xml/: componentDescription.xml
gingacc-mmi/: Makefile.am  TODO  autogen.sh  configure.in  doxygenConfigFile
gingacc-mmi/doxygen/html/: Acceleration_8cpp.html  Acceleration_8h.html  Acceleration_8h_source.html  Channel_8h_source.html  CommunicationManager_8cpp.html  CommunicationManager_8h.html  CommunicationManager_8h_source.html  Context_8h_source.html  DFBMultimodalInputEvent_8cpp.html  DFBMultimodalInputEvent_8h.html  DFBMultimodalInputEvent_8h_source.html  Definitions_8h_source.html  DuplicateException_8h_source.html  EnhancedInputManager_8cpp.html  EnhancedInputManager_8h_source.html  EventParser_8cpp.html  EventParser_8h_source.html  File_8cpp.html  File_8h.html  File_8h_source.html  IEnhancedInputManager_8h.html  IEnhancedInputManager_8h_source.html  IInputMode_8h.html  IInputMode_8h_source.html  IMultimodalInputEventListener_8h.html  IMultimodalInputEventListener_8h_source.html  IMultimodalInputEvent_8h.html  IMultimodalInputEvent_8h_source.html  InkMLParser_8h_source.html  InkSource_8h_source.html  Ink_8h_source.html  InputModeModifier_8h.html  InputModeModifier_8h_source.html  InputModeRedirecter_8h.html  InputModeRedirecter_8h_source.html  MultimodalInputEvent_8cpp.html  MultimodalInputEvent_8h.html  MultimodalInputEvent_8h_source.html  TraceFormat_8h_source.html  Trace_8h_source.html  (+88 more)
gingacc-mmi/doxygen/latex/: Acceleration_8cpp.tex  Acceleration_8h.tex  CommunicationManager_8cpp.tex  CommunicationManager_8h.tex  DFBMultimodalInputEvent_8cpp.tex  DFBMultimodalInputEvent_8h.tex  EnhancedInputManager_8cpp.tex  EventParser_8cpp.tex  File_8cpp.tex  File_8h.tex  IEnhancedInputManager_8h.tex  IInputMode_8h.tex  IMultimodalInputEventListener_8h.tex  IMultimodalInputEvent_8h.tex  InputModeModifier_8h.tex  InputModeRedirecter_8h.tex  MultimodalInputEvent_8cpp.tex  MultimodalInputEvent_8h.tex  annotated.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1Acceleration.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1CommunicationManager.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1DFBMultimodalInputEvent.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1DuplicateException.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1EnhancedInputManager.eps  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1EnhancedInputManager.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1EventParser.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1File.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1IEnhancedInputManager.eps  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1IEnhancedInputManager.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1IInputMode.eps  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1IInputMode.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1IMultimodalInputEvent.eps  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1IMultimodalInputEvent.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1IMultimodalInputEventListener.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1InputModeModifier.eps  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1InputModeModifier.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1InputModeRedirecter.eps  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1InputModeRedirecter.tex  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1MultimodalInputEvent.eps  classbr_1_1ufscar_1_1lince_1_1ginga_1_1core_1_1mmi_1_1MultimodalInputEvent.tex  (+16 more)
gingacc-mmi/include/: Acceleration.h  Channel.h  CommunicationManager.h  Context.h  DFBMultimodalInputEvent.h  Definitions.h  DuplicateException.h  EnhancedInputManager.h  EventParser.h  File.h  IEnhancedInputManager.h  IInputMode.h  IMultimodalInputEvent.h  IMultimodalInputEventListener.h  Ink.h  InkMLParser.h  InkSource.h  InputModeModifier.h  InputModeRedirecter.h  Makefile.am  MultimodalInputEvent.h  Trace.h  TraceFormat.h  Utility.h
gingacc-mmi/src/: Acceleration.cpp  Channel.cpp  CommunicationManager.cpp  DFBMultimodalInputEvent.cpp  DuplicateException.cpp  EnhancedInputManager.cpp  EventParser.cpp  File.cpp  Ink.cpp  InkMLParser.cpp  InputModeModifier.cpp  InputModeRedirecter.cpp  Makefile.am  MultimodalInputEvent.cpp  Trace.cpp  TraceFormat.cpp  Utility.cpp
gingalssm-cpp/: INSTALL  README  autogen.sh  configure.in
gingalssm-cpp/include/: CommonCoreManager.h  DataWrapperListener.h  ICommonCoreManager.h  IPresentationEngineManager.h  Makefile.am  PresentationEngineManager.h  StcWrapper.h
gingalssm-cpp/src/: CommonCoreManager.cpp  DataWrapperListener.cpp  Makefile.am  PresentationEngineManager.cpp  StcWrapper.cpp
gingalssm-cpp/test/: Makefile.am  test.cpp
ipad-text-event-gen-app/GingaChat/: Connection.h  Connection.m  GingaChatViewController.xib  GingaChat_Prefix.pch  MainWindow.xib  ServicesBrowser.h  ServicesBrowser.m  ServicesBrowserDelegate.h  comeco.xml  main.m
ipad-text-event-gen-app/GingaChat/Classes/: GingaChatAppDelegate.h  GingaChatAppDelegate.m  GingaChatViewController.h  GingaChatViewController.m  ServicesListViewController.h  (+2 more)
lua-text-event-receiver-app/: main.ncl  mm.lua
multimodal-test-app/: autogen.sh  configure.in  doxygenConfigFile
multimodal-test-app/doxygen/html/: MultimodalTest_8h.html  MultimodalTest_8h_source.html  annotated.html  classbr_1_1usp_1_1intermidia_1_1ginga_1_1multimodaltest_1_1MultimodalTest-members.html  classbr_1_1usp_1_1intermidia_1_1ginga_1_1multimodaltest_1_1MultimodalTest.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
multimodal-test-app/doxygen/latex/: MultimodalTest_8h.tex  annotated.tex  classbr_1_1usp_1_1intermidia_1_1ginga_1_1multimodaltest_1_1MultimodalTest.tex  doxygen.sty  files.tex  refman.tex
multimodal-test-app/include/: Makefile.am  MultimodalTest.h
multimodal-test-app/src/: Makefile.am  MultimodalTest.cpp
(+3 files in other folders)
