METASOURCES = AUTO
LIBS =

includedir = /usr/local/include/ginga/mmi/
include_HEADERS = IEnhancedInputManager.h IInputMode.h \
	IMultimodalInputEvent.h IMultimodalInputEventListener.h \
	InputModeModifier.h InputModeRedirecter.h DuplicateException.h \
	EnhancedInputManager.h MultimodalInputEvent.h EventParser.h File.h \
	Channel.h Context.h Definitions.h Ink.h InkMLParser.h InkSource.h Trace.h \
	TraceFormat.h Utility.h CommunicationManager.h Acceleration.h

